test/error/error.input076.zc
No cases in switch on line 3
